--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1.4",
+    "glob-all": "^3.1.0",
     "laravel-mix": "^2.0.0",
     "node-sass": "^4.8.1",
+    "purgecss-webpack-plugin": "^0.20.1",
     "tailwindcss": "^0.4.3"
   }
 }
