--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "deploy": "./deploy"
+    "deploy": "./deploy",
+    "docs:build": "vuepress build docs -d dist/docs"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,14 @@
   },
   "homepage": "https://github.com/quickwords/quickwords.co#readme",
   "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1.4",
     "glob-all": "^3.1.0",
     "laravel-mix": "^2.0.0",
-    "node-sass": "^4.8.1",
+    "node-sass": "^4.11.0",
     "purgecss-webpack-plugin": "^0.20.1",
     "tailwindcss": "^0.4.3",
-    "vuepress": "^0.10.0"
+    "vuepress": "^0.14.0"
   }
 }
