--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
     "autoprefixer": "^9.4.10",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.0",
     "tailwindcss": "^0.7.4",
